assets/common/css/footer.css
.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 90px;
    line-height: 70px;
    background-color: rgba(0, 0, 0, 0.5);
}

.iconFacebook {
    padding-right: 5px;
    text-decoration: none !important;
    color: white;
}

.iconFacebook img {
    content: url("../../common/images/navbar/facebook_white_icon.png");
}

.iconInstagram img {
    content: url("../../common/images/navbar/instagram_white_icon.png");
}

.iconFacebook img:hover {
    content: url("../../common/images/navbar/facebook_original_icon.png");
    text-decoration: none !important;
}

.iconInstagram img:hover {
    content: url("../../common/images/navbar/instagram_original_icon.png");
    text-decoration: none !important;
}

.socialMedia {
    float: right;
}

.partnerships a {
    text-decoration: none !important;
}


/* @media (max-width:1024px) {
    .partnerships a img {
        max-width: 12%;
    }
} */

.partnerships a img {
    padding-right: 2px;
    width: 40px;
    /* height: 50px; */
}

.partnerships a img:hover {
    opacity: 0.7;
}


/* .parceria {
    max-width:6%
} */

